# valorant_vod_preview

./: .gitignore  AGENTS.md  agent_detector.py  benchmark_ocr.py  config.py  debug_model.py  downloader.py  formation_analyzer.py  frame_extractor.py  inspect_ocr.py  main.py  ocr_engine.py  position_analyzer.py  pyproject.toml  report_generator.py  requirements.txt  scouting_engine.py  screenshot_manager.py  server.py  session_manager.py  test_debug_img.py  test_ocr.py  utils.py
frontend/: vite.config.ts
frontend/src/: api.ts  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Analysis.tsx  Rounds.tsx  Videos.tsx
test_output/: round_09_metadata.json
valorant_agent_icons/: Thumbs.db
