[project]
name = "minimap_extract"
version = "0.1.0"
description = "Valorant Tool"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "yt-dlp>=2023.0.0",
    "opencv-python>=4.8.0",
    "numpy<2.0.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "alive-progress",
    "paddlepaddle-gpu>=3.2.2",
    "paddleocr>=3.3.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "transformers>=4.57.3",
    "einops>=0.8.1",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.2",
    "accelerate>=1.12.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'win32'"]
override-dependencies = [
    "opencv-python>=4.8.0",
    "numpy<2.0.0",
]

# ★ここを追加：パッケージとインデックスを紐付ける
[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu129" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "paddle-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
explicit = true
